# fastapi-manage

./: LICENSE  README.md  README_en.md  conf.py  fastapi_manage.py  fastapi_manage_old.py  main.py  serializer.py  setup.py
bin_files/: project_file_data.py  project_file_dir.py
fastapi-manage/: README.md  pyproject.toml
fastapi-manage/fastapi_manage/: __init__.py  main.py  redis.py
fastapi-manage/tests/: test_fastapi_manage.py
templates/: main.py-tpl  manage.py-tpl  requirements.txt
templates/alembic/: env.py-tpl
templates/api/: common.py-tpl
templates/api/api_v1/: api.py-tpl
templates/api/api_v1/endpoints/: user.py-tpl
templates/core/: config.py-tpl  security.py-tpl
templates/crud/: __init__.py-tpl  base.py-tpl  crud_user.py-tpl
templates/db/: base.py-tpl  base_class.py-tpl  init_db.py-tpl  session.py-tpl
templates/libs/: Pagination.py  dependencies.py-tpl  pagination.py-tpl  security.py-tpl
templates/middleware/: authentication.py  authentication.py-tpl  auto_db_session.py-tpl  pagination.py  rate_limit.py-tpl
templates/models/: user.py-tpl
templates/schemas/: __init__.py-tpl  token.py-tpl  user.py-tpl
templates/tasks/: __init__.py-tpl  config.py-tpl  tasks.py-tpl
test-ap/: main.py
test-ap/alembic/: env.py
test-ap/alembic/versions/: 736ad48e6d48_auto_commit.py
test-ap/core/: config.py
test-ap/db/: base.py  session.py
test-ap/libs/: security.py
test-ap/models/: user.py
test-ap/schemas/: token.py
test-ap/tasks/: config.py  tasks.py
test-ap/test/: test_rate.py
test-project/: README.md  alembic.ini  main.py  manage.py  start-celery.sh  start-gunicorn.sh
test-project/api/: common.py
test-project/api/api_v1/: api.py
test-project/api/api_v1/endpoints/: user.py
test-project/core/: auto_session.py  celery.py  config.py  security.py
test-project/crud/: base.py  crud_user.py
test-project/db/: base.py  base_class.py  init_db.py  session.py
test-project/libs/: Pagination.py  dependencies.py  pagination.py  security.py
test-project/middleware/: authentication.py  auto_db_session.py  pagination.py  rate_limit.py
test-project/models/: user.py
test-project/project/main/: main.py
test-project/schemas/: __init__.py  token.py  user.py
test-project/tasks/: __init__.py  config.py  my_tasks.py  task.py  tasks.py
test-project/test/: test_path.py  test_rate.py  test_sentry.py  test_uvicorn.py
