[tool.poetry]
name = "fastapi-manage"
version = "0.7.1"
description = "FastAPI template generation, database version management tools"
authors = ["lewei_huang <auxpd96@163.com>"]
readme = 'README.md'
license = "MIT"
repository = "https://gitee.com/LeanDe/fastapi-manage"
classifiers=[
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.scripts]
fastapi-manage = "fastapi_manage.main:app"

[tool.poetry.dependencies]
python = ">=3.6"
typer = ">=0.3.2"
configobj = ">=5.0.6"
Jinja2 = ">=2.11.2"
fastapi = ">=0.62.0"
uvicorn = ">=0.11.8"
SQLAlchemy = ">=1.3.20"
PyMySQL = ">=0.9.3"
alembic = ">=1.4.3"

[tool.poetry.dev-dependencies]
pytest = ">=5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
